# src/routes/task.router.ts
@@ -10,4 +10,9 @@ router.post(
   multerUpload.array("attachments", 5),
   taskController.addTask
 );
+router.get("/", jwtAuth, taskController.getTasks);
+router.put("/:id", jwtAuth, taskController.updateTask);
+router.patch("/:id/completed", jwtAuth, taskController.markTaskCompleted);
+router.get("/:id", jwtAuth, taskController.getTaskDetails);
+router.delete("/:id", jwtAuth, taskController.deleteTask);
 export default router;
